# Sentinella

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE.md  README.md  SECURITY.md  dev-run.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml
crates/argus/: Cargo.toml
crates/argus/src/: budget.rs  correlation.rs  engine.rs  lib.rs  profile.rs  verdict.rs
crates/argus/src/layers/: authenticode.rs  context.rs  file_deception.rs  ioc.rs  mime.rs  mod.rs  packer.rs  patterns.rs  pe_heuristics.rs  reputation.rs  script.rs  trusted_cache.rs  yara.rs
crates/argusd/: Cargo.toml
crates/argusd/src/: main.rs
crates/clamavd/: Cargo.toml
crates/clamavd/src/: main.rs
crates/etw_probe/: Cargo.toml
crates/etw_probe/src/: main.rs
crates/sandboxd/: Cargo.toml
crates/sandboxd/src/: etw.rs  main.rs  restricted.rs
crates/sentinella-argus/: Cargo.toml
crates/sentinella-argus/src/: main.rs
crates/sentinella-cli/: Cargo.toml
crates/sentinella-cli/src/: main.rs
crates/sentinella-common/: Cargo.toml
crates/sentinella-common/src/: lib.rs
crates/sentinella-dev-console/: Cargo.toml  README.md
crates/sentinella-dev-console/src/: app.rs  benchmark.rs  daemon.rs  ipc.rs  main.rs  provision.rs  tab_benchmark.rs  tab_setup.rs
crates/sentinella-ipc-proto/: Cargo.toml
crates/sentinella-ipc-proto/src/: engine.rs  full_config.rs  lib.rs  quarantine.rs  scan.rs  settings.rs  update.rs  watcher.rs
crates/sentinelld/: Cargo.toml  build.rs
crates/sentinelld/runtime/config/: sentinelld.toml
crates/sentinelld/src/: argus_worker.rs  clamav_worker.rs  convergence.rs  main.rs  paths.rs  runtime_integrity.rs  sandbox_worker.rs  win_process.rs
crates/sentinelld/src/amsi/: mod.rs  ps_bridge.rs
crates/sentinelld/src/calibration/: mod.rs
crates/sentinelld/src/config/: mod.rs
crates/sentinelld/src/db/: mod.rs
crates/sentinelld/src/devmode/: mod.rs  telemetry.rs
crates/sentinelld/src/ecosystem/: mod.rs
crates/sentinelld/src/engine/: bindings.rs  clamav.rs  mod.rs  residency.rs  sources.rs  update_pipeline.rs
crates/sentinelld/src/fish/: mod.rs  response.rs
crates/sentinelld/src/footprint/: mod.rs  pressure.rs  residency.rs
crates/sentinelld/src/idle_scanner/: mod.rs  resources.rs
crates/sentinelld/src/ipc/: client_auth.rs  mod.rs  policy.rs  state.rs
crates/sentinelld/src/memory_scanner/: mod.rs
crates/sentinelld/src/orchestrator/: mod.rs
crates/sentinelld/src/persistence/: mod.rs
crates/sentinelld/src/plm/: etw_intake.rs  mod.rs
crates/sentinelld/src/quarantine/: mod.rs
crates/sentinelld/src/scan/: ads.rs  cache.rs  mod.rs
crates/sentinelld/src/scheduler/: mod.rs
crates/sentinelld/src/targeting/: dedup.rs  full_disk.rs  mod.rs  startup.rs
crates/sentinelld/src/trust_graph/: mod.rs
crates/sentinelld/src/updater/: mod.rs
crates/sentinelld/src/watcher/: file_identity.rs  mod.rs
docs/: ANTIVIRUS_BEHAVIOR_REFERENCE.md  ARGUS_ATTACK_PROGRESSION.md  ARGUS_COMMON_AV_BASELINE.md  ARGUS_CONVERGENCE_MODEL.md  ARGUS_WORKER_ARCHITECTURE.md  BOUNDED_EXECUTION.md  CHANGELOG-0.1.6.md  CLAMAV_ENGINE_CACHE_RESEARCH.md  CLAUDE_HANDOFF_ARGUS_WORKER.md  DAILY_DRIVER_TEST_CHECKLIST.md  DEVELOPER_MODE_AND_BENCHMARK_v0.1.6.md  ENGINE_HOTSWAP_V2_DESIGN.md  ENGINE_V0_12_READINESS.md  ESET_FEATURE_PARITY_AUDIT.md  ETW_EXPLORATION.md  EXPLOIT_BLOCKER_ARCHITECTURE.md  FIELD_TESTING_GUIDE.md  HANDOFF.md  IDLE_SCANNER_ARCHITECTURE.md  INDEPENDENT_RELEASE_AUDIT_2026-05-22.md  INDEPENDENT_SEV_AUDIT.md  INSTALLER_BOOTSTRAP_FLOW.md  MEMORY_PROFILE_SESSION_001.md  ORCHESTRATOR_FIELD_TEST.md  PERFORMANCE_BENCHMARKS.md  PROJECT_SUMMARY.md  PROTECTION_MODULES_ARCHITECTURE.md  RELEASE_READINESS.md  RUNTIME_INTELLIGENCE.md  SENTINELLA_IMPROVEMENT_ROADMAP.md  SURICATA_EXPLORATION.md  UI_UX_DEEP_AUDIT.md  WEB_TRAFFIC_AWARENESS_ARCHITECTURE.md  WINDOWS_TOAST_ACTIONS_ROADMAP.md  WORKING_STATE_v0.1.0.md  ZEEK_EXPLORATION.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_argus_pe.rs  fuzz_convergence.rs  fuzz_etw_parser.rs  fuzz_ipc_frame.rs  fuzz_paths.rs
gui/: package.json  pnpm-lock.yaml  splash.html  vite.config.ts
gui/public/: splash.html  splash.js
gui/src/: App.css  App.tsx  app-version.ts
gui/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/runtime/config/: sentinelld.toml
gui/src-tauri/runtime/state/: ipc_secret
gui/src-tauri/src/: daemon_client.rs  fullscreen_reporter.rs  ipc_auth.rs  lib.rs  supervisor.rs
gui/src/api/: sentinella.ts
gui/src/components/: ActivityList.tsx  AppShell.tsx  AppUpdater.tsx  Card.tsx  ErrorBoundary.tsx  PageHeader.tsx  QuickActionCard.tsx  SettingsSection.tsx  ShieldIcon.tsx  Sidebar.tsx  StatCard.tsx  StatusCard.tsx  ToggleCard.tsx  TopBar.tsx
gui/src/data/: mock.ts
gui/src/hooks/: DaemonContext.tsx  useDaemon.ts  useSettings.ts
gui/src/i18n/: de.ts  en.ts  es.ts  fr.ts  index.ts  it.ts  ja.ts  pt-br.ts  ru.ts  zh-cn.ts
installer/windows/: Product.wxs  freshclam.conf.template
release/: DEPENDENCIES.md
runtime/: test-report.json
runtime/config/: freshclam.conf  freshclam.resolved.conf  sentinelld.toml
runtime/research_samples/: README.txt
runtime/rules/: ioc_hashes.txt
scripts/: baseline-memory.ps1  build-clamav-filebacked.bat  build-clamav-windows.bat  build-release.bat  cold-scan-benchmark.ps1  create-scan-test-corpus.ps1  disable-orchestrator-dev.ps1  disable-powershell-script-block-logging.ps1  enable-orchestrator-dev.ps1  enable-powershell-script-block-logging.ps1  fp-regression.bat  fuzz-regression.ps1  fuzz-smoke.ps1  install-service-windows.bat  install-service.bat  install-shell-menu.bat  known-bad-regression.bat  measure-memory.ps1  package-source-windows.bat  preflight-staging-versions.ps1  pressure-test.ps1  release-sanity-windows.bat  run-file-pilot-test.bat  setup-runtime-windows.bat  stage-windows-package.bat  start-service-windows.bat  stop-service-windows.bat  test-argus-worker.ps1  test-orchestrator-pilots.ps1  test-plm-etw.ps1  test-runtime-intake.ps1  uninstall-service-windows.bat  update-signatures-windows.bat
(+242 files in other folders)
