[package]
name = "sentinella-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

# Sentinella crates under test.
argus = { path = "../crates/argus" }

# Shared dependencies for harness construction.
serde_json = "1"

[[bin]]
name = "fuzz_convergence"
path = "fuzz_targets/fuzz_convergence.rs"
doc = false

[[bin]]
name = "fuzz_etw_parser"
path = "fuzz_targets/fuzz_etw_parser.rs"
doc = false

[[bin]]
name = "fuzz_paths"
path = "fuzz_targets/fuzz_paths.rs"
doc = false

[[bin]]
name = "fuzz_ipc_frame"
path = "fuzz_targets/fuzz_ipc_frame.rs"
doc = false

[[bin]]
name = "fuzz_argus_pe"
path = "fuzz_targets/fuzz_argus_pe.rs"
doc = false
