[package]
name = "argusd"
description = "Sentinella ARGUS isolated worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "argusd"
path = "src/main.rs"

[dependencies]
argus = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = "0.10"
