[package]
name = "etw_probe"
description = "ETW layout validation probe (diagnostic tool)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "etw_probe"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Threading",
    "Win32_System_Time",
] }
