[package]
name = "sandboxd"
description = "Sentinella behavioral sandbox worker (experimental)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sandboxd"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Time",
    "Win32_Security",
    "Win32_Security_Authorization",
] }
