[package]
name = "sentinella-argus"
description = "ARGUS Heuristics Engine — standalone CLI scanner"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sentinella-argus"
path = "src/main.rs"

[dependencies]
argus = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
