[package]
name = "sentinella-ipc-proto"
description = "JSON-RPC 2.0 protocol types shared between Sentinella daemon, CLI, and GUI"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
