[package]
name = "sentinelld"
description = "Sentinella daemon — scanning engine host, IPC server, real-time watcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sentinelld"
path = "src/main.rs"

[dependencies]
sentinella-ipc-proto = { workspace = true }
sentinella-common = { workspace = true }
argus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
libloading = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"
toml = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Time",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
