[package]
name = "sentinelld"
description = "Sentinella daemon — scanning engine host, IPC server, real-time watcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sentinelld"
path = "src/main.rs"

[dependencies]
sentinella-ipc-proto = { workspace = true }
sentinella-common = { workspace = true }
argus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
libloading = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"
toml = "0.8"
sha2 = "0.10"
hmac = "0.12"
# v0.1.7 Phase 3 — lock-free atomic engine hot-swap. Scans now read the
# current engine via a relaxed atomic Arc load instead of an RwLock read,
# so a reload never blocks an in-flight or new scan.
arc-swap = "1"
ureq = { version = "2", features = ["tls"] }
aes-gcm = "0.10"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Time",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemInformation",
    # v0.1.8: idle scanner's fullscreen-detection layer needs window
    # geometry, style flags, and monitor info to distinguish a true
    # fullscreen game from a regular maximized app (Tauri's WebView2
    # was tripping the old detector).
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
