[package]
name = "gui"
version = "0.1.0"
description = "Sentinella desktop GUI"
authors = ["Lucent Open Software"]
edition = "2021"

[lib]
name = "gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "time"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rand = "0.8"
